Add swipe-to-delete functionality for saved pages
- Add deletePage method to HomeViewModel
- Implement swipe-to-delete gesture in HomeView reading list
- Add localization string for delete action
- Full swipe enabled for quick deletion

--- a/iOS-App/PagePocket/Resources/Localization/Localizable.strings
+++ b/iOS-App/PagePocket/Resources/Localization/Localizable.strings
@@ -36,6 +36,7 @@
 "home.readingList.item.status.new" = "New";
 "home.readingList.item.status.progress" = "In Progress";
 "home.readingList.item.status.completed" = "Completed";
+"home.readingList.item.delete" = "Delete";
 
 "home.offlineTips.title" = "Offline mastery";
 "home.offlineTips.subtitle" = "Set up the essentials before travelling";
