Add delete button to reader toolbar
- Add deletePage method to OfflineReaderViewModel
- Implement delete button in reader toolbar with confirmation dialog
- Add localization strings for delete confirmation
- Auto-dismiss reader view after successful deletion
- Both swipe-to-delete and toolbar delete now available

--- a/iOS-App/PagePocket/Resources/Localization/Localizable.strings
+++ b/iOS-App/PagePocket/Resources/Localization/Localizable.strings
@@ -123,3 +123,8 @@
 "reader.loading" = "Loading offline content…";
 "reader.error.unavailable" = "We couldn't load this page offline.";
 "reader.toolbar.share" = "Share";
+"reader.toolbar.delete" = "Delete";
+"reader.delete.confirm.title" = "Delete Page";
+"reader.delete.confirm.message" = "This page will be permanently deleted from your offline library.";
+"reader.delete.confirm.delete" = "Delete";
+"common.cancel" = "Cancel";
