Update quick actions to only include working features
- Remove cloud sync quick action
- Replace collections with downloads quick action
- Both quick actions now navigate to existing tabs (Browser and Downloads)
- Add downloads.navigation.subtitle localization key
- Simplify action handling with only navigateToBrowser and navigateToDownloads

--- a/iOS-App/PagePocket/Resources/Localization/Localizable.strings
+++ b/iOS-App/PagePocket/Resources/Localization/Localizable.strings
@@ -92,6 +92,7 @@
 
 /* MARK: - Downloads */
 "downloads.navigation.title" = "Downloads";
+"downloads.navigation.subtitle" = "View your downloads";
 "downloads.navigation.menu" = "Open downloads actions";
 
 "downloads.active.title" = "Active downloads";
