Add premium status to Settings screen
- Show premium/free status badge in Settings
- Display crown icon with active/free status
- Add upgrade badge for free users
- Integrate PurchaseService into SettingsViewModel
- Update all previews and initializers
- Premium status visible throughout app

--- a/iOS-App/PagePocket/Resources/Localization/Localizable.strings
+++ b/iOS-App/PagePocket/Resources/Localization/Localizable.strings
@@ -102,6 +102,11 @@
 
 /* MARK: - Settings */
 "settings.navigation.title" = "Settings";
+"settings.section.premium.title" = "Premium";
+"settings.section.premium.status" = "Status";
+"settings.section.premium.status.active" = "Active";
+"settings.section.premium.status.free" = "Free";
+"settings.section.premium.upgrade" = "Upgrade to Premium";
 "settings.section.general.title" = "General";
 "settings.section.general.appTheme" = "App Theme";
 "settings.section.general.appTheme.system" = "System";
